# qhexedit2

./: .gitignore  Title.md  appveyor.yml  build-example.bat  build-example.sh  build-example.txt  build-python-bindings.bat  build-python-bindings.sh  build-python-bindings.txt  changelog.md  clean.sh  deploy.nsi  make-designer-plugin.sh  make-example.sh  make-library.sh  make-pyqt5-wheel.sh  make-pyqt6-wheel.sh  make-translations.sh  project.py  pyproject.toml  readme.md  release.md  setup.py
.github/workflows/: badge-binary.yml  badge-designer-plugin.yml  badge-library.yml  hexedit-qt6.binaries.yml  make-example-on-windows copy.yml  make-example-on-windows.txt  make-example-on-windows.yml  wheel-qt5-linux.yml  wheel-qt5-windows.yml  wheel-qt5.yml  (+3 more)
designer/: QHexEditPlugin.cpp  QHexEditPlugin.h  designer.pro
doc/: Doxyfile  doxygen_sqlite3.db  howtorelease.txt  release.txt
example/: hexedit.pro  main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  qhexedit.pro  qhexedit.qrc  searchdialog.cpp  searchdialog.h
python/: QHexEdit.sip  project.py  pyqt5-pyproject.toml  pyqt6-pyproject.toml  qhexedit.sip  translate.py
sip/: configure.py  qhexedit.pro  qhexedit.sip
src/: CMakeLists.txt  QHexEditPlugin.cpp  QHexEditPlugin.h  chunks.cpp  chunks.h  color_manager.cpp  color_manager.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h  qhexedit.pro  qhexedit.sip  qhexedit_p.cpp  qhexedit_p.h  qhexeditplugin.pro
test/: main.cpp  testchunks.cpp  testchunks.h
trunk/: build-python-bindings.sh  clean.bat
wiki/: index.wiki
(+161 files in other folders)
