[build-system]
requires = ["sip >=5", "PyQt-builder"]
build-backend = "sipbuild.api"

[project]
name = "QHexEdit"
version = "0.8.10"
description = "Python bindings for the QHexEdit Widget"
readme = "readme.md"
urls.homepage = "https://github.com/Simsys/qhexedit2"
dependencies = ["PyQt5 (>=5.2.0)"]
license = {text = "LGPL v2.1"}

[[project.authors]]
name = "Winfried Simon"
email = "winfried.simon@gmail.com"

[tools.sip]
abi-version = "12.8"
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.project]
sip-files-dir = "python"
